syntax = "proto3";

// it's going to split service request and response in different files
option java_multiple_files = true;
option java_package = "billing";

service BillingService {
  rpc CreateBillingAccount(BillingRequest) returns (BillingResponse);
}

message BillingRequest {
  string patientId = 1;
  string name = 2;
  string email = 3;
}

message BillingResponse {
  string accountId = 1;
  string status = 2;
}
